# MyAgent

./: .dockerignore  .env  .env.example  .gitattributes  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml  test_web_ui.py
.github/workflows/: phase0-smoke.yml
deploy/: README.md
deploy/grafana/: README.md  dashboard.json
deploy/prometheus/: README.md  alerts.yaml  servicemonitor.yaml
design-doc/: DESIGN.md  PLAN-next-iteration.md  PLAN-tui-queryengine-integration.md  PLAN-v0.5.0-next-iteration.md  ROADMAP.md  TUI-DESIGN.md
docs/: CONFIGURATION.md  GETTING_STARTED.md  INDEX.md  PRODUCTION.md  PROJECT_REVIEW.md  WEB_UI_REVIEW.md  WEB_UI_TASKS.md
reports/: hermes-agent-analysis.md  openclaw-analysis.md
src/myagent/: cli.py  (+3 more)
tests/: __init__.py  test_agents.py  test_cli.py  test_cli_web.py  test_config.py  test_context_compression.py  test_cost_tracker.py  test_engine.py  test_engine_query.py  test_gateway.py  test_gateway_adapters.py  test_gateway_base.py  test_gateway_bot.py  test_gateway_config.py  test_gateway_helpers.py  test_gateway_manager.py  test_health.py  test_hot_reload.py  test_imports.py  test_integration.py  test_llm.py  test_llm_anthropic.py  test_llm_deepseek.py  test_llm_minimax.py  test_llm_moonshot.py  test_llm_openai.py  test_llm_openrouter.py  test_llm_parser.py  test_llm_registry.py  test_llm_registry_extended.py  test_llm_zhipu.py  test_logging_config.py  test_lsp.py  test_mcp.py  test_memory.py  test_metrics.py  test_plugin_system.py  test_remote_bridge.py  test_scheduler.py  test_security.py  (+21 more)
(+201 files in other folders)
